--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "native-base": "^2.8.1",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.3",
+    "react-native-keyboard-aware-scroll-view": "^0.7.4",
     "react-native-swipeable": "^0.6.0",
-    "react-navigation": "^2.18.0"
+    "react-navigation": "^2.18.0",
+    "react-redux": "^5.1.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
