--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.3",
     "react-native-keyboard-aware-scroll-view": "^0.7.4",
+    "react-native-modal": "^7.0.0",
     "react-native-swipeable": "^0.6.0",
     "react-navigation": "^2.18.0",
     "react-redux": "^5.1.0"
