--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.57.3",
     "react-native-keyboard-aware-scroll-view": "^0.7.4",
     "react-native-modal": "^7.0.0",
+    "react-native-simple-radio-button": "^2.7.3",
     "react-native-swipeable": "^0.6.0",
     "react-navigation": "^2.18.0",
     "react-redux": "^5.1.0"
